# cli-calculator-git-EmanuelGarcia

./: .gitignore  README.md  pyproject.toml  setup.py
app/: calculator.py  model.py
tests/: model_test.py
