[tool.poetry]
name = "app"
version = "0.1.0"
description = ""
authors = ["Jesus Hincapie <jahlon@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
click = "^8.1.7"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
calc = "app.calculator:cli"
